# RagFlow

./: .env.example  .gitignore  README.md  docker-compose.yml
db/migrations/: 01-extensions.sql  02-schema.sql
n8n/workflows/: 01-ingest-document.json  02-query-rag.json
scripts/: smoke_test.sh
services/ingestion/: Dockerfile  requirements.txt
services/ingestion/app/: main.py  parser.py  pipeline.py  storage.py
services/query/: Dockerfile  requirements.txt
services/query/app/: main.py  reranker.py
services/shared/: pyproject.toml
services/shared/rag_shared/: chunking.py  db.py  embeddings.py  llm.py  security.py  settings.py
services/web/: Dockerfile
services/web/app/: main.py
services/web/app/static/: app.js  index.html  styles.css
